--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 .ipynb_checkpoints
 *.pyc
 .DS_Store
+finding-aid*
+*.sqlite
+Untitled*.ipynb
+draft*.ipynb
+ajcp*
+.env
+*.sqlite-journal
+.gitignore
+unpublished-australian-20230302.ndjson
+unpublished_works_entering_pd_20230302.csv
